7.Security in K8s/run-pod-readonly.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-readonly-filesystem
spec:
  containers:
  - name: main
    image: ubuntu
    command: ["/bin/sleep", "999999"]
    securityContext:
      readOnlyRootFilesystem: true # This container’s filesystem can’t be written to
