7.Security in K8s/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []

# ---
# apiVersion: cilium.io/v2
# kind: CiliumNetworkPolicy
# metadata:
#   name: untitled-policy
# spec:
#   endpointSelector: {}
#   ingress:
#     - {}
#   egress:
#     - {}
